--- a/Registration_Form.html
+++ b/Registration_Form.html
@@ -89,6 +89,11 @@
 								<input type="text" name="phone" class="form-control" placeholder="Enter your phone number">
 							</div>
 
+							<div class="col-lg-6">
+								<label>Password:</label>
+								<input type="password" name="password" class="form-control" placeholder="Enter your password">
+							</div>
+
 							
 						</div>
 						<br>
